2015-03-03 Aurelien Degremont <aurelien.degremont@cea.fr>
    * Clean tuning.conf.example (ticket #184).

2014-10-02 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix 'status' perf regression introduced by #83 (ticket #185)

2014-09-03 Florent Thery <florent.thery@bull.net>
	* Trigger different actions based on modified options (ticket #180)
	* Add a new 'active' option to handle (de)activation of targets
	(ticket #83)

2014-08-21 Florent Thery <florent.thery@bull.net>
	* Fix error message format issue when using the same index twice
	(ticket #181)

2014-06-10 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Correctly detect target updates in model file (ticket #180)

2014-04-15 Kilian Cavalotti <kilian@stanford.edu>
	* Support hexadecimal indexes in model files (ticket #179)

2014-03-11 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Release: 1.3.1

2014-02-25 Florent Thery <florent.thery@bull.net>
	* Select module loading list depending on action and component
	(ticket #170).

2014-02-24 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Faster loading fixing useless object creation (ticket #156).

2014-01-28 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Better error handling when reading remote messages (ticket #174).

2014-01-27 Florent Thery <florent.thery@bull.net>
	* Disable quota handling for Lustre 2.4 and above (ticket #171)

2013-12-06 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Restore table display for local commands (ticket #172)
	* Restore broken -V disk/target behaviour (ticket #173)

2013-11-05 Florent Thery <florent.thery@bull.net>
	* Do not copy tuning.conf if -L or -R option is specified and handle
	-n and -x options when copying tuning.conf (ticket #168).

2013-10-30 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix traceback when adding/removing client with update (ticket #169).

2013-10-09 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Release: 1.3

2013-10-07 Aurelien Degremont <aurelien.degremont@cea.fr>