@@ -1,5 +1,8 @@
+2015-03-10 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Add --fanout command line option (ticket #175)
+
 2015-03-03 Aurelien Degremont <aurelien.degremont@cea.fr>
-    * Clean tuning.conf.example (ticket #184).
+	* Clean tuning.conf.example (ticket #184)
 
 2014-10-02 Aurelien Degremont <aurelien.degremont@cea.fr>
 	* Fix 'status' perf regression introduced by #83 (ticket #185)
